--- a/proc3_gs_prep.ipynb
+++ b/proc3_gs_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {
     "editable": true,
     "scrolled": true,
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,19 +91,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "available_cells= ['A549','A375','BICR6','HT29','PC3','U251MG','MCF7']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "cell_line_keywords = {\n",
     "    \"A549\": [\"lung cancer\",\"lung adenocarcinoma\",\"non-small cell lung cancer\",\"NSCLC\",\"pulmonary carcinoma\",\"alveolar basal epithelial carcinoma\",\n",
     "        \"lung carcinoma\",\"bronchogenic carcinoma\",\"human alveolar carcinoma\",\"lung epithelial cancer\"],\n",
-    "    \"ES2\": [\"ovarian cancer\",\"ovarian clear cell carcinoma\",\"epithelial ovarian carcinoma\",\"ovarian carcinoma\",\"ovarian adenocarcinoma\",\n",
-    "        \"ovarian tumor\",\"clear cell ovarian cancer\",\"ovarian epithelial cancer\", \"ovarian malignancy\",\"ovarian epithelial carcinoma\"],\n",
     "    \"A375\": [\"melanoma\",\"malignant melanoma\",\"skin cancer\",\"cutaneous melanoma\",\"melanocytic carcinoma\",\"skin malignant melanoma\",\"melanocytic tumor\",\n",
     "        \"skin carcinoma (melanoma type)\",\"dermal melanoma\",\"cutaneous malignant melanoma\"],\n",
-    "    \"AGS\": [\"stomach cancer\",\"gastric adenocarcinoma\",\"gastric carcinoma\",\"gastric cancer\",\"stomach carcinoma\",\"gastric epithelial carcinoma\",\n",
-    "        \"gastric malignant tumor\", \"stomach adenocarcinoma\",\"gastric epithelial cancer\",\"gastric neoplasm\"],\n",
     "    \"BICR6\": [\"head and neck cancer\",\"tongue squamous cell carcinoma\",\"oral cavity carcinoma\",\"head and neck squamous cell carcinoma\",\n",
     "        \"HNSCC\",\"oropharyngeal carcinoma\",\"oral squamous carcinoma\",\"head and neck carcinoma\",\"oral epithelial cancer\",\"tongue carcinoma\"],\n",
     "    \"HT29\": [\"colon cancer\",\"colorectal adenocarcinoma\",\"colon carcinoma\",\"colorectal cancer\",\"large intestine carcinoma\",\"intestinal adenocarcinoma\",\n",
@@ -114,15 +119,13 @@
     "    \"U251MG\": [\"glioblastoma\",\"glioblastoma multiforme\",\"GBM\",\"brain cancer\",\"astrocytoma\",\"high-grade glioma\",\"malignant glioma\",\"glioblastoma astrocytoma\",\n",
     "        \"brain glioma\",\"cerebral glioblastoma\"],\n",
     "    \"MCF7\": [\"breast cancer\",\"breast adenocarcinoma\",\"breast carcinoma\",\"mammary carcinoma\",\"estrogen-receptor positive breast cancer\",\n",
-    "        \"luminal A breast cancer\",\"invasive ductal carcinoma\",\"ER+ breast cancer\",\"mammary adenocarcinoma\",\"hormone-dependent breast cancer\"],\n",
-    "    \"YAPC\": [\"pancreatic cancer\",\"pancreatic adenocarcinoma\",\"exocrine pancreatic carcinoma\",\"pancreatic ductal carcinoma\",\n",
-    "        \"pancreatic carcinoma\",\"pancreatic ductal adenocarcinoma\",\"PDAC\",\"pancreatic epithelial cancer\",\"pancreatic tumor\",\"pancreatic malignancy\"]\n",
+    "        \"luminal A breast cancer\",\"invasive ductal carcinoma\",\"ER+ breast cancer\",\"mammary adenocarcinoma\",\"hormone-dependent breast cancer\"]\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -133,7 +136,7 @@
        "3669"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,16 +158,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "899"
+       "734"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -174,17 +177,7 @@
        "('A549', 227)"
       ]
      },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "('ES2', 211)"
-      ]
-     },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -194,17 +187,7 @@
        "('A375', 209)"
       ]
      },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "('AGS', 201)"
-      ]
-     },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -214,7 +197,7 @@
        "('BICR6', 192)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -224,7 +207,7 @@
        "('HT29', 208)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -234,7 +217,7 @@
        "('PC3', 206)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -244,7 +227,7 @@
        "('U251MG', 206)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -254,17 +237,7 @@
        "('MCF7', 226)"
       ]
      },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "('YAPC', 211)"
-      ]
-     },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -449,14 +422,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_21938/734268208.py:1: DtypeWarning: Columns (2,13) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_269816/734268208.py:1: DtypeWarning: Columns (2,13) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  uniprot_df=pd.read_table('data/HUMAN_9606_idmapping_selected.tab', header=None)\n"
      ]
     }
@@ -470,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -479,17 +452,7 @@
        "('A549', 165)"
       ]
      },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "('ES2', 58)"
-      ]
-     },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -499,17 +462,7 @@
        "('A375', 52)"
       ]
      },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "('AGS', 28)"
-      ]
-     },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -519,7 +472,7 @@
        "('BICR6', 11)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -529,7 +482,7 @@
        "('HT29', 91)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -539,7 +492,7 @@
        "('PC3', 129)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -549,7 +502,7 @@
        "('U251MG', 62)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -559,17 +512,7 @@
        "('MCF7', 139)"
       ]
      },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "('YAPC', 41)"
-      ]
-     },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
